// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cancellationRefundInfo with dollar only should render with both refundable and nonrefunable funds 1`] = `
<div>
  <form>
    <div
      class="cancel-refund-info"
    >
      <div
        class="price-line trip-totals--new-trip-total cancel-refund-info--trip-totals"
      >
        <span
          class="price-line--title"
        >
          SHARED__REFUND_METHOD__REFUND_INFO_TRIP_TOTAL
        </span>
        <div
          class="price-amount"
        >
          <div
            class="price-line--currency_total"
          >
            <div
              class="currency"
            >
              <span
                class="money-sign"
              >
                $
              </span>
              <span
                data-qa="total-amount"
              >
                159.98
              </span>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          class="refund-info-per-type p5 bgwhite bdt bdb"
        >
          <div
            class="price-line refund-info-per-type--price-total-line_credit"
          >
            <span
              class="price-line--title"
            >
              Credit
            </span>
            <div
              class="price-amount"
            >
              <div
                class="price-line--currency_total"
              >
                <div
                  class="currency"
                >
                  <span
                    class="money-sign"
                  >
                    $
                  </span>
                  <span
                    data-qa="total-amount"
                  >
                    59.98
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="refund-method pl5 bgwhite py5 mb6"
        >
          <div
            class="fields divided grouped"
          >
            <div
              class="field"
            >
              <div
                class="no-shadow select-input icon-fixed"
              >
                <span>
                  <select
                    class="dropdown empty"
                    data-qa="select-dropdown"
                    name="refundMethod"
                    placeholder="SHARED__REFUND_METHOD__SELECT_AN_OPTION"
                  >
                    <option
                      class="placeholder"
                      data-qa="dqa-disabled-option"
                      disabled=""
                      value=""
                    >
                      SHARED__REFUND_METHOD__SELECT_AN_OPTION
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="BACK_TO_ORIGINAL_PAYMENT"
                    >
                      SHARED__REFUND_METHOD__REFUND_TO_CREDIT_CARD
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="HOLD_FUTURE_USE"
                    >
                      SHARED__REFUND_METHOD__HOLD_FOR_FUTURE_USE
                    </option>
                  </select>
                </span>
                <input
                  class=""
                  icon="caret-down"
                  name="refundMethod"
                  placeholder="SHARED__REFUND_METHOD__SELECT_AN_OPTION"
                />
                <i
                  class="icon icon_caret-down"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          class="refund-info-per-type p5 bgwhite bdt bdb"
        >
          <div
            class="price-line refund-info-per-type--price-total-line_credit"
          >
            <span
              class="price-line--title"
            >
              Credit
            </span>
            <div
              class="price-amount"
            >
              <div
                class="price-line--currency_total"
              >
                <div
                  class="currency"
                >
                  <span
                    class="money-sign"
                  >
                    $
                  </span>
                  <span
                    data-qa="total-amount"
                  >
                    100.00
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="p5 bgwhite"
          data-qa="non-refundable-method"
        >
          <div
            class="xlarge"
          >
            SHARED__REFUND_METHOD__MESSAGE
          </div>
          <span
            class="large gray4"
          >
            SHARED__REFUND_METHOD__HOLD_FOR_FUTURE_USE
          </span>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`cancellationRefundInfo with dollar only should render with only nonrefundable funds 1`] = `
<div>
  <form>
    <div
      class="cancel-refund-info"
    >
      <div
        class="price-line trip-totals--new-trip-total cancel-refund-info--trip-totals"
      >
        <span
          class="price-line--title"
        >
          SHARED__REFUND_METHOD__REFUND_INFO_TRIP_TOTAL
        </span>
        <div
          class="price-amount"
        >
          <div
            class="price-line--currency_total"
          >
            <div
              class="currency"
            >
              <span
                class="money-sign"
              >
                $
              </span>
              <span
                data-qa="total-amount"
              >
                159.98
              </span>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          class="refund-info-per-type p5 bgwhite bdt bdb"
        >
          <div
            class="price-line refund-info-per-type--price-total-line_credit"
          >
            <span
              class="price-line--title"
            >
              Credit
            </span>
            <div
              class="price-amount"
            >
              <div
                class="price-line--currency_total"
              >
                <div
                  class="currency"
                >
                  <span
                    class="money-sign"
                  >
                    $
                  </span>
                  <span
                    data-qa="total-amount"
                  >
                    159.98
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="p5 bgwhite"
          data-qa="non-refundable-method"
        >
          <div
            class="xlarge"
          >
            SHARED__REFUND_METHOD__MESSAGE
          </div>
          <span
            class="large gray4"
          >
            SHARED__REFUND_METHOD__HOLD_FOR_FUTURE_USE
          </span>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`cancellationRefundInfo with dollar only should render with only refundable funds 1`] = `
<div>
  <form>
    <div
      class="cancel-refund-info"
    >
      <div
        class="price-line trip-totals--new-trip-total cancel-refund-info--trip-totals"
      >
        <span
          class="price-line--title"
        >
          SHARED__REFUND_METHOD__REFUND_INFO_TRIP_TOTAL
        </span>
        <div
          class="price-amount"
        >
          <div
            class="price-line--currency_total"
          >
            <div
              class="currency"
            >
              <span
                class="money-sign"
              >
                $
              </span>
              <span
                data-qa="total-amount"
              >
                159.98
              </span>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          class="refund-info-per-type p5 bgwhite bdt bdb"
        >
          <div
            class="price-line refund-info-per-type--price-total-line_credit"
          >
            <span
              class="price-line--title"
            >
              Credit
            </span>
            <div
              class="price-amount"
            >
              <div
                class="price-line--currency_total"
              >
                <div
                  class="currency"
                >
                  <span
                    class="money-sign"
                  >
                    $
                  </span>
                  <span
                    data-qa="total-amount"
                  >
                    159.98
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="refund-method pl5 bgwhite py5"
        >
          <div
            class="fields divided grouped"
          >
            <div
              class="field"
            >
              <div
                class="no-shadow select-input icon-fixed"
              >
                <span>
                  <select
                    class="dropdown empty"
                    data-qa="select-dropdown"
                    name="refundMethod"
                    placeholder="SHARED__REFUND_METHOD__SELECT_AN_OPTION"
                  >
                    <option
                      class="placeholder"
                      data-qa="dqa-disabled-option"
                      disabled=""
                      value=""
                    >
                      SHARED__REFUND_METHOD__SELECT_AN_OPTION
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="BACK_TO_ORIGINAL_PAYMENT"
                    >
                      SHARED__REFUND_METHOD__REFUND_TO_CREDIT_CARD
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="HOLD_FUTURE_USE"
                    >
                      SHARED__REFUND_METHOD__HOLD_FOR_FUTURE_USE
                    </option>
                  </select>
                </span>
                <input
                  class=""
                  icon="caret-down"
                  name="refundMethod"
                  placeholder="SHARED__REFUND_METHOD__SELECT_AN_OPTION"
                />
                <i
                  class="icon icon_caret-down"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`cancellationRefundInfo with points should render with both refundable and nonrefunable funds 1`] = `
<div>
  <form>
    <div
      class="cancel-refund-info"
    >
      <div
        class="price-line trip-totals--new-trip-total cancel-refund-info--trip-totals"
      >
        <span
          class="price-line--title"
        >
          SHARED__REFUND_METHOD__REFUND_INFO_TRIP_TOTAL
        </span>
        <div
          class="price-amount"
        >
          <div
            class="price-line--currency_total"
          >
            <div
              class="currency"
            >
              <span
                data-qa="total-amount"
              >
                16,310
              </span>
              <span
                class="points-sign"
              >
                SHARED__COMMON__POINTS_TEXT
              </span>
            </div>
            <div
              class="currency"
            >
              <span
                class="money-sign"
              >
                $
              </span>
              <span
                data-qa="total-amount"
              >
                5.60
              </span>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          class="price-line refund-info-per-type refund-info-per-type--price-total-line_credit cancel-refund-info--points-total"
        >
          <span
            class="price-line--title"
          >
            Credit
          </span>
          <div
            class="price-amount"
          >
            <div
              class="price-line--currency_total"
            >
              <div
                class="currency"
              >
                <span
                  data-qa="total-amount"
                >
                  16,310
                </span>
                <span
                  class="points-sign"
                >
                  SHARED__COMMON__POINTS_TEXT
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          class="refund-info-per-type p5 bgwhite bdt bdb"
        >
          <div
            class="price-line refund-info-per-type--price-total-line_credit"
          >
            <span
              class="price-line--title"
            >
              Credit
            </span>
            <div
              class="price-amount"
            >
              <div
                class="price-line--currency_total"
              >
                <div
                  class="currency"
                >
                  <span
                    class="money-sign"
                  >
                    $
                  </span>
                  <span
                    data-qa="total-amount"
                  >
                    2.60
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="refund-method pl5 bgwhite py5 mb6"
        >
          <div
            class="fields divided grouped"
          >
            <div
              class="field"
            >
              <div
                class="no-shadow select-input icon-fixed"
              >
                <span>
                  <select
                    class="dropdown empty"
                    data-qa="select-dropdown"
                    name="refundMethod"
                    placeholder="SHARED__REFUND_METHOD__SELECT_AN_OPTION"
                  >
                    <option
                      class="placeholder"
                      data-qa="dqa-disabled-option"
                      disabled=""
                      value=""
                    >
                      SHARED__REFUND_METHOD__SELECT_AN_OPTION
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="BACK_TO_ORIGINAL_PAYMENT"
                    >
                      SHARED__REFUND_METHOD__REFUND_TO_CREDIT_CARD
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="HOLD_FUTURE_USE"
                    >
                      SHARED__REFUND_METHOD__HOLD_FOR_FUTURE_USE
                    </option>
                  </select>
                </span>
                <input
                  class=""
                  icon="caret-down"
                  name="refundMethod"
                  placeholder="SHARED__REFUND_METHOD__SELECT_AN_OPTION"
                />
                <i
                  class="icon icon_caret-down"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          class="refund-info-per-type p5 bgwhite bdt bdb"
        >
          <div
            class="price-line refund-info-per-type--price-total-line_credit"
          >
            <span
              class="price-line--title"
            >
              Credit
            </span>
            <div
              class="price-amount"
            >
              <div
                class="price-line--currency_total"
              >
                <div
                  class="currency"
                >
                  <span
                    class="money-sign"
                  >
                    $
                  </span>
                  <span
                    data-qa="total-amount"
                  >
                    3.00
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="p5 bgwhite"
          data-qa="non-refundable-method"
        >
          <div
            class="xlarge"
          >
            SHARED__REFUND_METHOD__MESSAGE
          </div>
          <span
            class="large gray4"
          >
            SHARED__REFUND_METHOD__HOLD_FOR_FUTURE_USE
          </span>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`cancellationRefundInfo with points should render with only nonrefundable funds 1`] = `
<div>
  <form>
    <div
      class="cancel-refund-info"
    >
      <div
        class="price-line trip-totals--new-trip-total cancel-refund-info--trip-totals"
      >
        <span
          class="price-line--title"
        >
          SHARED__REFUND_METHOD__REFUND_INFO_TRIP_TOTAL
        </span>
        <div
          class="price-amount"
        >
          <div
            class="price-line--currency_total"
          >
            <div
              class="currency"
            >
              <span
                data-qa="total-amount"
              >
                16,310
              </span>
              <span
                class="points-sign"
              >
                SHARED__COMMON__POINTS_TEXT
              </span>
            </div>
            <div
              class="currency"
            >
              <span
                class="money-sign"
              >
                $
              </span>
              <span
                data-qa="total-amount"
              >
                5.60
              </span>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          class="refund-info-per-type p5 bgwhite bdt bdb"
        >
          <div
            class="price-line refund-info-per-type--price-total-line_credit"
          >
            <span
              class="price-line--title"
            >
              Credit
            </span>
            <div
              class="price-amount"
            >
              <div
                class="price-line--currency_total"
              >
                <div
                  class="currency"
                >
                  <span
                    class="money-sign"
                  >
                    $
                  </span>
                  <span
                    data-qa="total-amount"
                  >
                    3.00
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="p5 bgwhite"
          data-qa="non-refundable-method"
        >
          <div
            class="xlarge"
          >
            SHARED__REFUND_METHOD__MESSAGE
          </div>
          <span
            class="large gray4"
          >
            SHARED__REFUND_METHOD__HOLD_FOR_FUTURE_USE
          </span>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`cancellationRefundInfo with points should render with only refundable funds 1`] = `
<div>
  <form>
    <div
      class="cancel-refund-info"
    >
      <div
        class="price-line trip-totals--new-trip-total cancel-refund-info--trip-totals"
      >
        <span
          class="price-line--title"
        >
          SHARED__REFUND_METHOD__REFUND_INFO_TRIP_TOTAL
        </span>
        <div
          class="price-amount"
        >
          <div
            class="price-line--currency_total"
          >
            <div
              class="currency"
            >
              <span
                data-qa="total-amount"
              >
                16,310
              </span>
              <span
                class="points-sign"
              >
                SHARED__COMMON__POINTS_TEXT
              </span>
            </div>
            <div
              class="currency"
            >
              <span
                class="money-sign"
              >
                $
              </span>
              <span
                data-qa="total-amount"
              >
                5.60
              </span>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          class="refund-info-per-type p5 bgwhite bdt bdb"
        >
          <div
            class="price-line refund-info-per-type--price-total-line_credit"
          >
            <span
              class="price-line--title"
            >
              Credit
            </span>
            <div
              class="price-amount"
            >
              <div
                class="price-line--currency_total"
              >
                <div
                  class="currency"
                >
                  <span
                    class="money-sign"
                  >
                    $
                  </span>
                  <span
                    data-qa="total-amount"
                  >
                    2.60
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="refund-method pl5 bgwhite py5"
        >
          <div
            class="fields divided grouped"
          >
            <div
              class="field"
            >
              <div
                class="no-shadow select-input icon-fixed"
              >
                <span>
                  <select
                    class="dropdown empty"
                    data-qa="select-dropdown"
                    name="refundMethod"
                    placeholder="SHARED__REFUND_METHOD__SELECT_AN_OPTION"
                  >
                    <option
                      class="placeholder"
                      data-qa="dqa-disabled-option"
                      disabled=""
                      value=""
                    >
                      SHARED__REFUND_METHOD__SELECT_AN_OPTION
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="BACK_TO_ORIGINAL_PAYMENT"
                    >
                      SHARED__REFUND_METHOD__REFUND_TO_CREDIT_CARD
                    </option>
                    <option
                      data-qa="dqa-enabled-option"
                      value="HOLD_FUTURE_USE"
                    >
                      SHARED__REFUND_METHOD__HOLD_FOR_FUTURE_USE
                    </option>
                  </select>
                </span>
                <input
                  class=""
                  icon="caret-down"
                  name="refundMethod"
                  placeholder="SHARED__REFUND_METHOD__SELECT_AN_OPTION"
                />
                <i
                  class="icon icon_caret-down"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
</div>
`;
